squash last layout centering bug

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -127,9 +127,16 @@ ul {
 }
 
 
-.intro, .about {
-  margin: 4rem 0 6rem 0;
+.intro {
+  margin-top: 4rem;
+  margin-bottom: 6rem;
 }
+.about {
+  margin-top: 4rem;
+  margin-bottom: 5rem;
+}
+
+
 
 .lower-heading {
   margin-bottom: 1.5rem;
